java/java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/UncaughtExceptionTest/testThisParamInsideAnonymous-hints.pass
Surround Statement with try-catch
